--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring-elasticsearch</module>
         <module>spring-datajpa-postgresql</module>
         <module>spring-boot-api-doc</module>
+        <module>spring-boot-rabbitmq</module>
     </modules>
 
 
