--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>spring-datajpa-postgresql</module>
         <module>spring-boot-api-doc</module>
         <module>spring-boot-rabbitmq</module>
+        <module>spring-boot-dockerization</module>
+        <module>spring-boot-aop</module>
     </modules>
 
 
