--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>spring-boot-rabbitmq</module>
         <module>spring-boot-dockerization</module>
         <module>spring-boot-aop</module>
+        <module>spring-boot-graphql</module>
     </modules>
 
 
