--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>spring-boot-graphql</module>
         <module>spring-boot-rest-template</module>
         <module>spring-redis-cache</module>
+        <module>spring-boot-websocket</module>
+        <module>spring-boot-events</module>
     </modules>
 
 
