--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <module>spring-redis-cache</module>
         <module>spring-boot-websocket</module>
         <module>spring-boot-events</module>
+        <module>spring-boot-gridfs-fileupload</module>
+        <module>spring-boot-jwt</module>
+        <module>spring-security-facebook-login</module>
     </modules>
 
 
