--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
         <module>spring-boot-gridfs-fileupload</module>
         <module>spring-boot-jwt</module>
         <module>spring-security-facebook-login</module>
+        <module>spring-boot-kafka</module>
+        <module>spring-boot-exception-handling</module>
+        <module>spring-boot-hazelcast-cache</module>
     </modules>
 
 
