--- a/spring-datajpa-postgresql/src/main/resources/application.properties
+++ b/spring-datajpa-postgresql/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/javadb
 spring.datasource.username=postgres
 spring.datasource.password=12345
+
+spring.jpa.database=postgresql
